--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <title>Northcoders News</title>
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,400i,700,700i" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+    crossorigin="anonymous">
 </head>
 
 <body>
